--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Este es un sitio web de prueba</h1>
-<p>Y este fue lo que paso </p>
+<p>Mi amor</p>
+<p>Y este fue lo que paso, me puse a practicar para ver como hago un dominio </p>
 <p><img src="https://i.imgur.com/Q1Qjelg.gif"/><p>
 
